<resources>
    <string name="app_name">Android雷達</string>
    <string name="title_activity_maps">Map</string>

    <!--Content Provider-->
    <string name="content_authority">com.cauliflower.danielt.smartphoneradar</string>

    <!--Response code-->
    <!--<string name="INSERT_USER_SUCCESS">註冊定位用帳號成功</string>-->

    <string name="INSERT_PHONE_INFO_SUCCESS">註冊定位用帳號成功</string>

    <string name="UPDATE_LOCATION_SUCCESS">UPDATE LOCATION SUCCESS</string>

    <string name="LOGIN_SUCCESS">LOGIN SUCCESS</string>

    <string name="SEND_VERIFICATION_CODE_SUCCESS">SEND_VERIFICATION_CODE_SUCCESS</string>

    <string name="UPDATE_PASSWORD_SUCCESS">UPDATE_PASSWORD_SUCCESS</string>

    <string name="PARAMETER_ERROR">PARAMETER ERROR</string>

    <string name="USER_ALREADY_EXISTS">該帳號已被使用</string>

    <string name="IMEI_ALREADY_EXISTS">裝置已綁定過其他帳號</string>

    <string name="INSERT_USER_ERROR">INSERT USER ERROR</string>

    <string name="INSERT_PHONE_INFO_ERROR">INSERT PHONE INFO ERROR</string>

    <string name="UPDATE_LOCATION_ERROR">UPDATE LOCATION ERROR</string>

    <string name="LOGIN_ERROR">帳號或密碼錯誤</string>

    <string name="LOGIN_WRONG_PHONE_INFO">無法識別裝置</string>

    <string name="SEND_VERIFICATION_CODE_FAILED">無法寄出驗證碼</string>

    <string name="UPDATE_PASSWORD_FAILED">UPDATE_PASSWORD_FAILED</string>

    <!--common-->
    <string name="dialog_title_ops">哎呀！</string>

    <!--SettingsActivity-->
    <string name="dialog_msg_server_closed">伺服器關閉中，目前無法使用帳號、查詢及定位功能</string>
    <string name="dialog_msg_loading">載入中...</string>
    <string name="dialog_msg_enablePosition_noInternetConnected">已允許定位，但您的裝置尚未連上網路，
        此時定位服務無法啟動</string>
    <string name="connect_server">連接伺服器</string>
    <string name="connectNetwork_before_connectServer">請先開啟網路</string>
    <string name="updateSetting">更新設定</string>
    <string name="settingWorkNextTime">下次啟動定位功能時才生效</string>

    <!--Preference email-->
    <string name="pref_category_title_AccountActivity">帳號</string>
    <string name="pref_key_AccountActivity">AccountActivity</string>
    <string name="pref_title_AccountActivity">帳號資訊</string>

    <!--Preference maps-->
    <string name="pref_category_title_MapsActivity">查詢</string>
    <string name="pref_key_MapsActivity">MapsActivity</string>
    <string name="pref_title_MapsActivity">查詢裝置位置</string>

    <!--Preference settings position-->
    <string name="pref_category_title_settings">設定</string>

    <string name="pref_title_position">定位該裝置</string>
    <string name="pref_key_position">position</string>
    <string name="pref_positioning">定位中</string>
    <string name="pref_not_positioning">未定位</string>
    <bool name="pref_defaultValue_position">false</bool>

    <!--Preference settings updateFrequency-->
    <string name="pref_title_updateFrequency">定位頻率</string>
    <string name="pref_key_updateFrequency">updateFrequency</string>
    <string name="pref_label_updateFrequency_5s">5秒</string>
    <string name="pref_label_updateFrequency_10s">10秒</string>
    <string name="pref_label_updateFrequency_30s">30秒</string>
    <string name="pref_label_updateFrequency_60s">60秒</string>

    <string name="pref_value_updateFrequency_5s">5000</string>
    <string name="pref_value_updateFrequency_10s">10000</string>
    <string name="pref_value_updateFrequency_30s">30000</string>
    <string name="pref_value_updateFrequency_60s">60000</string>
    <string name="pref_defaultValue_updateFrequency">5000</string>

    <!--Preference ContactUs-->
    <!--<string name="pref_category_title_contactUs">聯絡我們</string>-->
    <!--<string name="pref_key_contactUs">contactUs</string>-->
    <!--<string name="pref_title_mailUs">寄信給我</string>-->

    <!--AccountActivity-->
    <string name="notSignIn">未登入</string>
    <string name="targetTracked">追蹤目標:&#160;&#160;</string>
    <string name="nothing">無</string>
    <string name="signIn">登入</string>
    <string name="signOut">登出</string>
    <string name="signUp">註冊</string>
    <string name="userHasBindToOtherDevice">該帳號已綁定於其他裝置</string>
    <string name="addTargetTracked">新的追蹤目標</string>
    <string name="please_complete_the_fields">請填妥資料</string>
    <string name="give_me_read_phone_state_permission">無法註冊，請授權電話資訊</string>
    <string name="signIn_failed">登入失敗</string>
    <string name="createUser_success">登入成功</string>
    <string name="userFbHasNoEmail">請先設定您在Facebook的Email</string>
    <string name="dialogTitle_positionSafe">定位安全</string>
    <string name="dialogMsg_pleaseSetPassword">請設定一組密碼，任何人皆需要該密碼，才能追蹤您的位置</string>
    <string name="addTargetTracked_success">新增追蹤目標成功</string>
    <string name="addTargetTracked_failed">新增追蹤目標失敗</string>
    <string name="please_receive_verification_code">請到E-mail接收驗證碼</string>
    <string name="update_password_success">更新密碼成功</string>
    <string name="title_forget_password">忘記密碼</string>
    <string name="email">Email</string>
    <string name="nickName">暱稱</string>
    <string name="phoneNumber">電話</string>
    <string name="ask">問問你～</string>
    <string name="tracking">目前追蹤</string>

    <!--MyDialog-->
    <string name="no_internet">請檢查網路是否已連線</string>
    <string name="ok">好</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>
    <string name="title_signUp">註冊</string>
    <string name="title_logIn">登入</string>
    <string name="send_verification_code">發送驗證碼</string>
    <string name="edTxt_hint_email">Email</string>
    <string name="edTxt_hint_password">定位密碼</string>
    <string name="edTxt_error_email">請輸入Email</string>
    <string name="edTxt_error_password">請輸入定位密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="digits_account">"0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
    <string name="digits_password">"0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
    <string name="digits_email">"0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."</string>

    <!--MapsActivity-->
    <string name="mapsActivity_pref">mapsActivity_pref</string>
    <string name="pref_key_showList">showList</string>
    <string name="pref_key_showNewMarkOnly">showNewMarkOnly</string>
    <bool name="pref_defaultValue_showList">true</bool>
    <bool name="pref_defaultValue_showNewMarkOnly">true</bool>

    <string name="locationList">座標清單</string>
    <string name="showNewMarkOnly">只顯示最新座標</string>
    <string name="get_no_location">查無新座標</string>
    <string name="get_new_location">查得新座標</string>
    <string name="time">時間</string>
    <string name="latitude">經度</string>
    <string name="longitude">緯度</string>

    <!--RadarService-->
    <string name="updateLocationFailed_close_service">伺服器連線異常，將關閉雷達服務</string>


    <!--ProgressDialog-->
    <string name="loading">載入中</string>
    <string name="wrong_user">帳號或密碼錯誤</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_key_trackingTarget">trackingTarget</string>
    <string name="pref_key_userEmail">userEmail</string>

    <!--ChooseTargetDialog-->
    <string name="QQ">QQ&#8230;</string>
    <string name="changeTrackingTarget">更改對象</string>
    <string name="pleaseAddTargetFirst">請先到帳號畫面新增追蹤對象</string>


    <!-- TODO: Remove or change this placeholder text -->

</resources>
