<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_locationList"
        android:checkable="true"
        android:checked="@bool/pref_defaultValue_showList"
        android:orderInCategory="1"
        android:title="@string/locationList"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_showNewMarkOnly"
        android:checkable="true"
        android:checked="@bool/pref_defaultValue_showNewMarkOnly"
        android:orderInCategory="2"
        android:title="@string/showNewMarkOnly"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_changeTarget"
        android:orderInCategory="3"
        android:title="@string/changeTrackingTarget"
        app:showAsAction="never" />
</menu>