<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="帳號：" />

            <EditText

                android:id="@+id/dialog_forgetPassword_edTxt_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:digits="@string/digits_account"
                android:hint="輸入帳號"
                android:imeOptions="actionNext"
                android:maxLength="@integer/length_account"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="信箱：" />

            <EditText
                android:id="@+id/dialog_forgetPassword_edTxt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:digits="@string/digits_email"
                android:hint="輸入信箱"
                android:maxLength="@integer/length_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="驗證碼：" />

            <EditText
                android:id="@+id/dialog_forgetPassword_edTxt_verificationCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:enabled="false"
                android:hint="輸入驗證碼"
                android:inputType="text"
                android:maxLength="@integer/length_verification_code" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_forgetPassword_btn_send_verification_code"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/send_verification_code"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/dialog_forgetPassword_btn_cancel"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/dialog_forgetPassword_btn_ok"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:text="@string/ok"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>